<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addSite"
        app:showAsAction="always"/>
    <item
            android:id="@+id/action_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
    <item
            android:id="@+id/item_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_addSite"
            app:showAsAction="always"/>



</menu>